inline css, css files, css babel loader, bootstrap

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,8 @@
 	<title>myApplication</title>
 </head>
 <body>
-<div id ="normal"></div>
-<div id="react"></div>
-<div id="select"></div>
-<div id="login"></div>
+
+<div id="root"></div>
 
 </body>
 <script type="text/javascript" src="../dist/main.js"></script>
